--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "source-map-support": "^0.4.18",
+    "strip": "^3.0.0",
+    "stripe": "^7.3.0",
     "uuid": "^3.2.1"
   }
 }
